Document alias and remove `prefix`

--- a/site/routes_bundler.templ
+++ b/site/routes_bundler.templ
@@ -103,9 +103,12 @@ templ PageBundler(r *http.Request, manifest PluginManifest, store *BundlerStore)
 				</div>
 				<label class="form-control w-full">
 					<div class="label">
-						<span class="label-text">Alias Prefix</span>
+						<span class="label-text">Alias</span>
 						<div class="label-text">
-							Only use this if you have some conflict with a legacy library.
+							{{
+								cdnUrl := templ.SafeURL(fmt.Sprintf("https://cdn.jsdelivr.net/gh/starfederation/datastar@%s/bundles/datastar-aliased.js", manifest.Version))
+							}}
+							We maintain a  <a href={ cdnUrl }><code>data-ds-*</code> aliased version here</a>.
 						</div>
 					</div>
 					<input type="text" class="input input-bordered w-full lowercase" data-bind-alias/>
