add margin to end of code snippet

--- a/site/src/css/site.css
+++ b/site/src/css/site.css
@@ -16,6 +16,10 @@ pre code {
     @apply text-base !important;
 }
 
+pre code span.cl {
+    padding-inline-end: 12px;
+}
+
 .output {
     @apply input input-bordered bg-transparent flex flex-grow items-center max-w-64 overflow-hidden;
 }
