--- a/site/shared.templ
+++ b/site/shared.templ
@@ -104,6 +104,9 @@ templ headerTopLevelLinks(r *http.Request) {
 	@headerTopLevelLink(r, "Examples")
 	@headerDropdownMenu("More") {
 		<li>
+			@headerTopLevelLink(r, "Videos")
+		</li>
+		<li>
 			@headerTopLevelLink(r, "Essays")
 		</li>
 		<li>
