--- a/site/routes_videos.templ
+++ b/site/routes_videos.templ
@@ -19,7 +19,7 @@ templ PageVideos(r *http.Request, videos ...Video) {
 						thumbnail := "https://img.youtube.com/vi/" + video.Code + "/maxresdefault.jpg"
 						title := video.Title
 					}}
-					<div id={ id } data-on-click={ action } class="w-full max-w-xl aspect-video cursor-pointer">
+					<div id={ id } data-on-click={ action } title={ title } class="w-full max-w-xl aspect-video cursor-pointer">
 						<img src={ thumbnail } alt={ title } class="w-full h-full"/>
 					</div>
 				}
