Fixing some bugs and making example work with client and server reactivity

--- a/sdk/dotnet/csharp/src/StarFederation.Datastar.Example/Components/App.razor
+++ b/sdk/dotnet/csharp/src/StarFederation.Datastar.Example/Components/App.razor
@@ -4,7 +4,8 @@
 
 <head>
     <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="color-scheme" content="light dark">
     <base href="/"/>
     <link rel="stylesheet" href="@Assets["pico.classless.pumpkin.min.css"]"/>
     <link rel="stylesheet" href="@Assets["app.css"]"/>
@@ -12,6 +13,7 @@
     <DatastarHeadOutlet/>
     <ImportMap/>
     <HeadOutlet/>
+    <title>Datastar Example</title>
 </head>
 
 <body>
