--- a/sdk/dotnet/csharp/src/StarFederation.Datastar.Example/Components/Layout/MainLayout.razor
+++ b/sdk/dotnet/csharp/src/StarFederation.Datastar.Example/Components/Layout/MainLayout.razor
@@ -1,3 +1,11 @@
 ﻿@inherits LayoutComponentBase
 
-@Body
+<header>
+    Header
+</header>
+<main>
+    @Body
+</main>
+<footer>
+    Footer
+</footer>
